<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/mainBtnPrac4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text ="@string/main_btn_prac4"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/mainBtnPrac5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text ="@string/main_btn_prac5"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/mainBtnPrac6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text ="@string/main_btn_prac6"
        android:layout_margin="5dp"/>

</LinearLayout>